# Itshere

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json
It-here-frontend/: app.json  package-lock.json  package.json
It-here-frontend-new/: app.json  eas.json  package-lock.json  package.json
It-here-frontend-new/android/: settings.gradle
It-here-frontend-new/android/app/: build.gradle
It-here-frontend-new/app/: _layout.tsx  chat.tsx  index.tsx  profile.tsx  register.tsx
It-here-frontend-new/app/(tabs)/: Home.tsx  _layout.tsx  chats.tsx  post.tsx
It-here-frontend-new/context/: user-auth.tsx
It-here-frontend-new/ios/: Podfile
It-here-frontend/app/: _layout.tsx  index.tsx  profile.tsx  register.tsx
It-here-frontend/app/(tabs)/: Home.tsx  _layout.tsx  post.tsx
It-here-frontend/context/: user-auth.tsx
ItsHere/: App.tsx  app.json  package-lock.json  package.json
ItsHere/Components/: Login.tsx
ItsHere/android/: settings.gradle
ItsHere/android/app/: build.gradle  google-services.json
Itshere/: app.json  package-lock.json  package.json
Itshere/android/: settings.gradle
Itshere/android/app/: build.gradle
Itshere/app/(Home)/: _layout.tsx  index.tsx
Itshere/app/(login)/: index.tsx
Itshere/ios/: Podfile
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs
backend/src/db/: Database.rs
backend/src/models/: User.rs
itshere-backend/: Cargo.toml
itshere-backend/src/: auth.rs  db.rs  error.rs  main.rs  model.rs
itshere-backend/src/web/: mod.rs  route_edit.rs  routes_chat.rs  routes_login.rs  routes_post.rs
(+21 files in other folders)
