[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0.203", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros","postgres", "chrono"] }
dotenv = "0.15"
actix-cors = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
