[package]
name = "itshere-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6.18"
serde = {version="1.0.219",features=["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hyper = "1.6.0"
tower-cookies = "0.9"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
futures = "0.3"
